--- a/index.html
+++ b/index.html
@@ -33,9 +33,9 @@
       <ul class="nav-list">
         <li><a href="#home"    class="nav-link active">Home</a></li> 
         <li><a href="services.html" class="nav-link">Services</a></li>
-        <li><a href="#skills"  class="nav-link">Skills</a></li>
+        <li><a href="skills.html"  class="nav-link">Skills</a></li>
         <li><a href="#portfolio"class="nav-link">Portfolio</a></li>
-        <li><a href="#contact" class="nav-link">Contact</a></li>
+        <li><a href="contact.html" class="nav-link">Contact</a></li>
       </ul>
     </nav>
   </header>
