--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
         <li><a href="#home"    class="nav-link active">Home</a></li> 
         <li><a href="services.html" class="nav-link">Services</a></li>
         <li><a href="skills.html"  class="nav-link">Skills</a></li>
-        <li><a href="#portfolio"class="nav-link">Portfolio</a></li>
+        <li><a href="portfolio.html" class="nav-link">Portfolio</a></li>
         <li><a href="contact.html" class="nav-link">Contact</a></li>
       </ul>
     </nav>
