--- a/services.html
+++ b/services.html
@@ -43,9 +43,9 @@
         <ul class="nav-list">
           <li><a href="index.html#home"      class="nav-link">Home</a></li>
           <li><a href="services.html"        class="nav-link active">Services</a></li>
-          <li><a href="index.html#skills"    class="nav-link">Skills</a></li>
-          <li><a href="index.html#portfolio" class="nav-link">Portfolio</a></li>
-          <li><a href="index.html#contact"   class="nav-link">Contact</a></li>
+          <li><a href="skills.html"    class="nav-link">Skills</a></li>
+          <li><a href="portfolio.html" class="nav-link">Portfolio</a></li>
+          <li><a href="contact.html"   class="nav-link">Contact</a></li>
         </ul>
       </nav>
     </header>
