--- a/skills.html
+++ b/skills.html
@@ -42,7 +42,7 @@
           <li><a href="index.html#home"      class="nav-link">Home</a></li>
           <li><a href="services.html"        class="nav-link">Services</a></li>
           <li><a href="skills.html"          class="nav-link active">Skills</a></li>
-          <li><a href="index.html#portfolio" class="nav-link">Portfolio</a></li>
+          <li><a href="portfolio.html" class="nav-link">Portfolio</a></li>
           <li><a href="contact.html"         class="nav-link">Contact</a></li>
         </ul>
       </nav>
