--- a/index.html
+++ b/index.html
@@ -31,11 +31,11 @@
         <span class="bar"></span>
       </div>
       <ul class="nav-list">
-        <li><a href="index.html#home"    class="nav-link active">Home</a></li> 
-        <li><a href="services.html" class="nav-link">Services</a></li>
-        <li><a href="skills.html"  class="nav-link">Skills</a></li>
-        <li><a href="portfolio.html" class="nav-link">Portfolio</a></li>
-        <li><a href="contact.html" class="nav-link">Contact</a></li>
+        <li><a href="index.html#home"      class="nav-link">Home</a></li>
+        <li><a href="services.html"        class="nav-link">Services</a></li> 
+        <li><a href="skills.html"          class="nav-link">Skills</a></li>
+        <li><a href="portfolio.html"       class="nav-link">Portfolio</a></li>
+        <li><a href="contact.html"         class="nav-link active">Contact</a></li>
       </ul>
     </nav>
   </header>
