--- a/portfolio.html
+++ b/portfolio.html
@@ -51,29 +51,56 @@
     </header>
 
     <!-- Portfolio Section -->
-    <section id="portfolio" class="section">
-      <h2 class="section-title">Portfolio</h2>
-      <div class="portfolio-container">
-        <div class="project">
+<section id="portfolio" class="section">
+  <h2 class="section-title">Portfolio</h2>
+
+  <div class="project-carousel">
+    <!-- Project counter -->
+    <div class="project-indicator">
+      <span id="current">1</span>/<span id="total">3</span>
+    </div>
+
+    <!-- Slider viewport -->
+    <div class="carousel-viewport">
+      <div class="carousel-track">
+        <div class="project active">
           <img src="Images/delivery platform dashboard.jpeg" alt="Project One">
-          <h3>Food Delivery</h3>
-          <p>Single-page app with smooth animations.</p>
-          <a href="project1.html" class="btn">View Details</a>
+          <div class="project-info">
+            <div class="project-number">01</div>
+            <h3>Food Delivery</h3>
+            <p>Single-page app with smooth animations.</p>
+            <a href="project1.html" class="btn">View Details</a>
+          </div>
         </div>
         <div class="project">
           <img src="Images/recruitment platform landing page.jpeg" alt="Project Two">
-          <h3>Recruitment Platform</h3>
-          <p>Interactive dashboard with charts &amp; graphs.</p>
-          <a href="project2.html" class="btn">View Details</a>
+          <div class="project-info">
+            <div class="project-number">02</div>
+            <h3>Recruitment Platform</h3>
+            <p>Interactive dashboard with charts &amp; graphs.</p>
+            <a href="project2.html" class="btn">View Details</a>
+          </div>
         </div>
         <div class="project">
           <img src="Images/sanbot.jpeg" alt="Project Three">
-          <h3>Sanbot – API</h3>
-          <p>E-commerce site with shopping cart.</p>
-          <a href="project3.html" class="btn">View Details</a>
+          <div class="project-info">
+            <div class="project-number">03</div>
+            <h3>Sanbot – API</h3>
+            <p>E-commerce site with shopping cart.</p>
+            <a href="project3.html" class="btn">View Details</a>
+          </div>
         </div>
       </div>
-    </section>
+    </div>
+
+    <!-- Carousel controls -->
+    <div class="carousel-controls">
+      <button id="prev" aria-label="Previous project">&#10094;</button>
+      <button id="next" aria-label="Next project">&#10095;</button>
+    </div>
+  </div>
+</section>
+
 
     <!-- Footer -->
     <footer>
