--- a/portfolio.html
+++ b/portfolio.html
@@ -51,56 +51,55 @@
     </header>
 
     <!-- Portfolio Section -->
-<section id="portfolio" class="section">
-  <h2 class="section-title">Portfolio</h2>
+    <section id="portfolio" class="section">
+      <h2 class="section-title">Portfolio</h2>
 
-  <div class="project-carousel">
-    <!-- Project counter -->
-    <div class="project-indicator">
-      <span id="current">1</span>/<span id="total">3</span>
-    </div>
+      <div class="project-carousel">
+        <!-- Project counter -->
+        <div class="project-indicator">
+          <span id="current">01</span>/<span id="total">03</span>
+        </div>
 
-    <!-- Slider viewport -->
-    <div class="carousel-viewport">
-      <div class="carousel-track">
-        <div class="project active">
-          <img src="Images/delivery platform dashboard.jpeg" alt="Project One">
-          <div class="project-info">
-            <div class="project-number">01</div>
-            <h3>Food Delivery</h3>
-            <p>Single-page app with smooth animations.</p>
-            <a href="project1.html" class="btn">View Details</a>
+        <!-- Slider viewport -->
+        <div class="carousel-viewport">
+          <div class="carousel-track">
+            <div class="project active">
+              <img src="Images/delivery platform dashboard.jpeg" alt="Project One">
+              <div class="project-info">
+                <div class="project-number">01</div>
+                <h3>Food Delivery</h3>
+                <p>Single-page app with smooth animations.</p>
+                <a href="project1.html" class="btn">View Details</a>
+              </div>
+            </div>
+            <div class="project">
+              <img src="Images/recruitment platform landing page.jpeg" alt="Project Two">
+              <div class="project-info">
+                <div class="project-number">02</div>
+                <h3>Recruitment Platform</h3>
+                <p>Interactive dashboard with charts &amp; graphs.</p>
+                <a href="project2.html" class="btn">View Details</a>
+              </div>
+            </div>
+            <div class="project">
+              <img src="Images/sanbot.jpeg" alt="Project Three">
+              <div class="project-info">
+                <div class="project-number">03</div>
+                <h3>Sanbot – API</h3>
+                <p>E-commerce site with shopping cart.</p>
+                <a href="project3.html" class="btn">View Details</a>
+              </div>
+            </div>
           </div>
         </div>
-        <div class="project">
-          <img src="Images/recruitment platform landing page.jpeg" alt="Project Two">
-          <div class="project-info">
-            <div class="project-number">02</div>
-            <h3>Recruitment Platform</h3>
-            <p>Interactive dashboard with charts &amp; graphs.</p>
-            <a href="project2.html" class="btn">View Details</a>
-          </div>
-        </div>
-        <div class="project">
-          <img src="Images/sanbot.jpeg" alt="Project Three">
-          <div class="project-info">
-            <div class="project-number">03</div>
-            <h3>Sanbot – API</h3>
-            <p>E-commerce site with shopping cart.</p>
-            <a href="project3.html" class="btn">View Details</a>
-          </div>
+
+        <!-- Carousel controls -->
+        <div class="carousel-controls">
+          <button id="prev" aria-label="Previous project">&#10094;</button>
+          <button id="next" aria-label="Next project">&#10095;</button>
         </div>
       </div>
-    </div>
-
-    <!-- Carousel controls -->
-    <div class="carousel-controls">
-      <button id="prev" aria-label="Previous project">&#10094;</button>
-      <button id="next" aria-label="Next project">&#10095;</button>
-    </div>
-  </div>
-</section>
-
+    </section>
 
     <!-- Footer -->
     <footer>
@@ -110,37 +109,41 @@
 
   <!-- Typed.js (if used elsewhere) -->
   <script src="https://cdn.jsdelivr.net/npm/typed.js@2.0.12"></script>
-  <!-- Main JS (mobile menu, smooth-scroll, scroll-spy, etc.) -->
+  <!-- Main JS -->
   <script src="script.js"></script>
 
-  <!-- Loader → Open-Paper & Fade-In Portfolio -->
+  <!-- Inline: Loader → Open-Paper & Carousel Setup -->
   <script>
-    window.addEventListener('load', () => {
-      setTimeout(() => {
-        document.getElementById('loader').style.display = 'none';
-        document.getElementById('page-content').classList.add('open-paper');
-        document.querySelector('.portfolio-container').classList.add('fade-in');
-      }, 1200);
-    });
-  </script>
-  <script>
-  window.addEventListener('load', () => {
-    // existing loader/open-paper code…
-    
-    // CAROUSEL SETUP
-    const slides = document.querySelectorAll('.carousel-track .project');
-    const totalEl = document.getElementById('total');
-    const currentEl = document.getElementById('current');
-    const prevBtn = document.getElementById('prev');
-    const nextBtn = document.getElementById('next');
+  // Mobile hamburger toggle
+  const menuBtn = document.getElementById('mobile-menu');
+  const navList = document.querySelector('.nav-list');
+  menuBtn.addEventListener('click', () => {
+    navList.classList.toggle('active');
+    menuBtn.classList.toggle('open');
+  });
 
+  window.addEventListener('load', () => {
+    // 1) Loader & paper-open & fade-in carousel
+    setTimeout(() => {
+      document.getElementById('loader').style.display = 'none';
+      document.getElementById('page-content').classList.add('open-paper');
+      document.querySelector('.project-carousel').classList.add('fade-in');
+    }, 1200);
+
+    // 2) Portfolio carousel initialization
+    const slides    = document.querySelectorAll('.carousel-track .project');
+    const totalEl   = document.getElementById('total');
+    const currentEl = document.getElementById('current');
+    const prevBtn   = document.getElementById('prev');
+    const nextBtn   = document.getElementById('next');
     let currentIndex = 0;
-    totalEl.textContent = slides.length;
+
+    totalEl.textContent = slides.length.toString().padStart(2, '0');
 
     function updateCarousel() {
-      slides.forEach((slide, i) => {
-        slide.classList.toggle('active', i === currentIndex);
-      });
+      slides.forEach((slide, i) =>
+        slide.classList.toggle('active', i === currentIndex)
+      );
       currentEl.textContent = (currentIndex + 1).toString().padStart(2, '0');
     }
 
@@ -153,10 +156,8 @@
       updateCarousel();
     });
 
-    // kick it off
     updateCarousel();
   });
-</script>
-
+  </script>
 </body>
 </html>
