--- a/portfolio.html
+++ b/portfolio.html
@@ -1,13 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width,initial-scale=1.0">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width,initial-scale=1.0" />
   <title>Portfolio | Ameed Shubietah</title>
 
   <!-- Google Fonts & FontAwesome -->
-  <link rel="preconnect" href="https://fonts.googleapis.com"/>
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin/>
+  <link rel="preconnect" href="https://fonts.googleapis.com" />
+  <link
+    rel="preconnect"
+    href="https://fonts.gstatic.com"
+    crossorigin
+  />
   <link
     href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&display=swap"
     rel="stylesheet"
@@ -20,7 +24,7 @@
   />
 
   <!-- Main stylesheet -->
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="style.css" />
 </head>
 <body>
 
@@ -41,11 +45,11 @@
           <span class="bar"></span>
         </div>
         <ul class="nav-list">
-          <li><a href="index.html#home"      class="nav-link">Home</a></li>
-          <li><a href="services.html"        class="nav-link">Services</a></li> 
-          <li><a href="skills.html"          class="nav-link">Skills</a></li>
-          <li><a href="portfolio.html"       class="nav-link active">Portfolio</a></li>
-          <li><a href="contact.html"         class="nav-link">Contact</a></li>
+          <li><a href="index.html#home" class="nav-link">Home</a></li>
+          <li><a href="services.html"    class="nav-link">Services</a></li>
+          <li><a href="skills.html"      class="nav-link">Skills</a></li>
+          <li><a href="portfolio.html"   class="nav-link active">Portfolio</a></li>
+          <li><a href="contact.html"     class="nav-link">Contact</a></li>
         </ul>
       </nav>
     </header>
@@ -63,40 +67,40 @@
         <!-- Slider viewport -->
         <div class="carousel-viewport">
           <div class="carousel-track">
+            <!-- Slide 1 -->
             <div class="project active">
-              <img src="Images/delivery platform dashboard.jpeg" alt="Project One">
               <div class="project-info">
                 <div class="project-number">01</div>
                 <h3>Food Delivery</h3>
                 <p>Single-page app with smooth animations.</p>
-                <a href="project1.html" class="btn">View Details</a>
               </div>
+              <img src="Images/delivery platform dashboard.jpeg" alt="Food Delivery" />
             </div>
+            <!-- Slide 2 -->
             <div class="project">
-              <img src="Images/recruitment platform landing page.jpeg" alt="Project Two">
               <div class="project-info">
                 <div class="project-number">02</div>
                 <h3>Recruitment Platform</h3>
                 <p>Interactive dashboard with charts &amp; graphs.</p>
-                <a href="project2.html" class="btn">View Details</a>
               </div>
+              <img src="Images/recruitment platform landing page.jpeg" alt="Recruitment Platform" />
             </div>
+            <!-- Slide 3 -->
             <div class="project">
-              <img src="Images/sanbot.jpeg" alt="Project Three">
               <div class="project-info">
                 <div class="project-number">03</div>
                 <h3>Sanbot – API</h3>
                 <p>E-commerce site with shopping cart.</p>
-                <a href="project3.html" class="btn">View Details</a>
               </div>
+              <img src="Images/sanbot.jpeg" alt="Sanbot – API" />
             </div>
           </div>
-        </div>
 
-        <!-- Carousel controls -->
-        <div class="carousel-controls">
-          <button id="prev" aria-label="Previous project">&#10094;</button>
-          <button id="next" aria-label="Next project">&#10095;</button>
+          <!-- Carousel controls, positioned top-right -->
+          <div class="carousel-controls">
+            <button id="prev" aria-label="Previous project">&#10094;</button>
+            <button id="next" aria-label="Next project">&#10095;</button>
+          </div>
         </div>
       </div>
     </section>
@@ -107,57 +111,60 @@
     </footer>
   </div><!-- /#page-content -->
 
-  <!-- Typed.js (if used elsewhere) -->
-  <script src="https://cdn.jsdelivr.net/npm/typed.js@2.0.12"></script>
   <!-- Main JS -->
   <script src="script.js"></script>
 
   <!-- Inline: Loader → Open-Paper & Carousel Setup -->
   <script>
-  // Mobile hamburger toggle
-  const menuBtn = document.getElementById('mobile-menu');
-  const navList = document.querySelector('.nav-list');
-  menuBtn.addEventListener('click', () => {
-    navList.classList.toggle('active');
-    menuBtn.classList.toggle('open');
-  });
-
-  window.addEventListener('load', () => {
-    // 1) Loader & paper-open & fade-in carousel
-    setTimeout(() => {
-      document.getElementById('loader').style.display = 'none';
-      document.getElementById('page-content').classList.add('open-paper');
-      document.querySelector('.project-carousel').classList.add('fade-in');
-    }, 1200);
-
-    // 2) Portfolio carousel initialization
-    const slides    = document.querySelectorAll('.carousel-track .project');
-    const totalEl   = document.getElementById('total');
-    const currentEl = document.getElementById('current');
-    const prevBtn   = document.getElementById('prev');
-    const nextBtn   = document.getElementById('next');
-    let currentIndex = 0;
-
-    totalEl.textContent = slides.length.toString().padStart(2, '0');
-
-    function updateCarousel() {
-      slides.forEach((slide, i) =>
-        slide.classList.toggle('active', i === currentIndex)
-      );
-      currentEl.textContent = (currentIndex + 1).toString().padStart(2, '0');
-    }
-
-    prevBtn.addEventListener('click', () => {
-      currentIndex = (currentIndex - 1 + slides.length) % slides.length;
-      updateCarousel();
-    });
-    nextBtn.addEventListener('click', () => {
-      currentIndex = (currentIndex + 1) % slides.length;
-      updateCarousel();
+    // Mobile hamburger toggle
+    const menuBtn = document.getElementById('mobile-menu');
+    const navList = document.querySelector('.nav-list');
+    menuBtn.addEventListener('click', () => {
+      navList.classList.toggle('active');
+      menuBtn.classList.toggle('open');
     });
 
-    updateCarousel();
-  });
+    window.addEventListener('load', () => {
+      // 1) Loader & open-paper & fade-in carousel
+      setTimeout(() => {
+        document.getElementById('loader').style.display = 'none';
+        document.getElementById('page-content').classList.add('open-paper');
+        document.querySelector('.project-carousel').classList.add('fade-in');
+      }, 1200);
+
+      // 2) Portfolio carousel
+      const slides    = document.querySelectorAll('.carousel-track .project');
+      const totalEl   = document.getElementById('total');
+      const currentEl = document.getElementById('current');
+      const prevBtn   = document.getElementById('prev');
+      const nextBtn   = document.getElementById('next');
+      let currentIndex = 0;
+
+      totalEl.textContent = slides.length.toString().padStart(2, '0');
+
+      function updateCarousel(direction) {
+        // remove 'active' from all
+        slides.forEach(s => s.classList.remove('active', 'slide-in', 'slide-out'));
+        // add out-animation to old
+        slides[direction === 'next'
+          ? (currentIndex - 1 + slides.length) % slides.length
+          : (currentIndex + 1) % slides.length
+        ].classList.add('slide-out');
+
+        // add active on new
+        slides[currentIndex].classList.add('active', 'slide-in');
+        currentEl.textContent = (currentIndex + 1).toString().padStart(2, '0');
+      }
+
+      prevBtn.addEventListener('click', () => {
+        currentIndex = (currentIndex - 1 + slides.length) % slides.length;
+        updateCarousel('prev');
+      });
+      nextBtn.addEventListener('click', () => {
+        currentIndex = (currentIndex + 1) % slides.length;
+        updateCarousel('next');
+      });
+    });
   </script>
 </body>
 </html>
