--- a/portfolio.html
+++ b/portfolio.html
@@ -1,17 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width,initial-scale=1.0" />
+  <meta charset="UTF-8"/>
+  <meta name="viewport" content="width=device-width,initial-scale=1.0"/>
   <title>Portfolio | Ameed Shubietah</title>
 
   <!-- Google Fonts & FontAwesome -->
-  <link rel="preconnect" href="https://fonts.googleapis.com" />
-  <link
-    rel="preconnect"
-    href="https://fonts.gstatic.com"
-    crossorigin
-  />
+  <link rel="preconnect" href="https://fonts.googleapis.com"/>
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin/>
   <link
     href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&display=swap"
     rel="stylesheet"
@@ -23,29 +19,81 @@
     referrerpolicy="no-referrer"
   />
 
-  <!-- Main stylesheet -->
-  <link rel="stylesheet" href="style.css" />
+  <!-- Your main stylesheet -->
+  <link rel="stylesheet" href="style.css"/>
+
+  <!-- Carousel-specific CSS -->
+  <style>
+  .project-carousel { max-width: 800px; margin: 0 auto; position: relative; }
+  .project-indicator { text-align: center; margin-bottom: 1rem; color: var(--clr-primary); }
+  .carousel-viewport { overflow: hidden; position: relative; }
+  .carousel-track {
+    display: flex;
+    transition: transform 0.6s ease;
+  }
+  .carousel-track .project {
+    flex: 0 0 100%;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    gap: 2rem;
+  }
+  .project-info { flex: 1; text-align: left; }
+  .project-number {
+    font-size: 2.5rem;
+    color: var(--clr-primary);
+    margin-bottom: 0.5rem;
+  }
+  .carousel-track img {
+    flex: 1;
+    max-width: 45%;
+    border-radius: 8px;
+  }
+  .carousel-controls {
+    position: absolute;
+    top: 1rem;
+    right: 1rem;
+    display: flex;
+    gap: 0.5rem;
+  }
+  .carousel-controls button {
+    background: var(--clr-primary);
+    border: none;
+    padding: 0.4rem 0.8rem;
+    border-radius: 4px;
+    color: var(--clr-dark);
+    font-size: 1.2rem;
+    cursor: pointer;
+    transition: background 0.3s;
+  }
+  .carousel-controls button:hover {
+    background: var(--clr-light);
+  }
+  .project-carousel.fade-in {
+    opacity: 0;
+    animation: fadeIn 0.8s forwards 1.2s;
+  }
+  @keyframes fadeIn {
+    to { opacity: 1; }
+  }
+  </style>
 </head>
 <body>
 
   <!-- Loader Overlay -->
-  <div id="loader">
-    <div class="loader-spinner"></div>
-  </div>
+  <div id="loader"><div class="loader-spinner"></div></div>
 
-  <!-- Page Content for Open-Paper -->
+  <!-- Page Content -->
   <div id="page-content">
     <!-- Navbar -->
     <header>
       <nav class="navbar">
         <div class="brand">Ameed<span>Shubietah</span></div>
         <div class="toggle" id="mobile-menu">
-          <span class="bar"></span>
-          <span class="bar"></span>
-          <span class="bar"></span>
+          <span class="bar"></span><span class="bar"></span><span class="bar"></span>
         </div>
         <ul class="nav-list">
-          <li><a href="index.html#home" class="nav-link">Home</a></li>
+          <li><a href="index.html#home"  class="nav-link">Home</a></li>
           <li><a href="services.html"    class="nav-link">Services</a></li>
           <li><a href="skills.html"      class="nav-link">Skills</a></li>
           <li><a href="portfolio.html"   class="nav-link active">Portfolio</a></li>
@@ -59,22 +107,19 @@
       <h2 class="section-title">Portfolio</h2>
 
       <div class="project-carousel">
-        <!-- Project counter -->
         <div class="project-indicator">
           <span id="current">01</span>/<span id="total">03</span>
         </div>
-
-        <!-- Slider viewport -->
         <div class="carousel-viewport">
           <div class="carousel-track">
             <!-- Slide 1 -->
-            <div class="project active">
+            <div class="project">
               <div class="project-info">
                 <div class="project-number">01</div>
                 <h3>Food Delivery</h3>
                 <p>Single-page app with smooth animations.</p>
               </div>
-              <img src="Images/delivery platform dashboard.jpeg" alt="Food Delivery" />
+              <img src="Images/delivery platform dashboard.jpeg" alt="Food Delivery"/>
             </div>
             <!-- Slide 2 -->
             <div class="project">
@@ -83,7 +128,7 @@
                 <h3>Recruitment Platform</h3>
                 <p>Interactive dashboard with charts &amp; graphs.</p>
               </div>
-              <img src="Images/recruitment platform landing page.jpeg" alt="Recruitment Platform" />
+              <img src="Images/recruitment platform landing page.jpeg" alt="Recruitment Platform"/>
             </div>
             <!-- Slide 3 -->
             <div class="project">
@@ -92,11 +137,10 @@
                 <h3>Sanbot – API</h3>
                 <p>E-commerce site with shopping cart.</p>
               </div>
-              <img src="Images/sanbot.jpeg" alt="Sanbot – API" />
+              <img src="Images/sanbot.jpeg" alt="Sanbot – API"/>
             </div>
           </div>
-
-          <!-- Carousel controls, positioned top-right -->
+          <!-- Controls -->
           <div class="carousel-controls">
             <button id="prev" aria-label="Previous project">&#10094;</button>
             <button id="next" aria-label="Next project">&#10095;</button>
@@ -106,65 +150,59 @@
     </section>
 
     <!-- Footer -->
-    <footer>
-      <p>&copy; 2025 Ameed Shubietah. All rights reserved.</p>
-    </footer>
+    <footer><p>&copy; 2025 Ameed Shubietah. All rights reserved.</p></footer>
   </div><!-- /#page-content -->
 
-  <!-- Main JS -->
+  <!-- Typed.js (if used) -->
+  <script src="https://cdn.jsdelivr.net/npm/typed.js@2.0.12"></script>
+  <!-- Global JS (mobile menu, etc.) -->
   <script src="script.js"></script>
 
-  <!-- Inline: Loader → Open-Paper & Carousel Setup -->
+  <!-- Inline Carousel + Loader/Open-Paper -->
   <script>
-    // Mobile hamburger toggle
-    const menuBtn = document.getElementById('mobile-menu');
-    const navList = document.querySelector('.nav-list');
-    menuBtn.addEventListener('click', () => {
-      navList.classList.toggle('active');
-      menuBtn.classList.toggle('open');
+  // Mobile menu toggle
+  const menuBtn = document.getElementById('mobile-menu');
+  const navList = document.querySelector('.nav-list');
+  menuBtn.addEventListener('click', () => {
+    navList.classList.toggle('active');
+    menuBtn.classList.toggle('open');
+  });
+
+  window.addEventListener('load', () => {
+    // hide loader, open-paper, then fade-in carousel
+    setTimeout(() => {
+      document.getElementById('loader').style.display = 'none';
+      document.getElementById('page-content').classList.add('open-paper');
+      document.querySelector('.project-carousel').classList.add('fade-in');
+    }, 1200);
+
+    // init carousel
+    const track    = document.querySelector('.carousel-track');
+    const slides   = Array.from(track.children);
+    const totalEl  = document.getElementById('total');
+    const currentEl= document.getElementById('current');
+    const prevBtn  = document.getElementById('prev');
+    const nextBtn  = document.getElementById('next');
+    let currentIndex = 0;
+
+    totalEl.textContent = slides.length.toString().padStart(2,'0');
+    track.style.transform = 'translateX(0)';
+
+    function updateCarousel(dir) {
+      // update index & slide
+      track.style.transform = `translateX(-${currentIndex * 100}%)`;
+      currentEl.textContent = (currentIndex+1).toString().padStart(2,'0');
+    }
+
+    prevBtn.addEventListener('click', () => {
+      currentIndex = (currentIndex - 1 + slides.length) % slides.length;
+      updateCarousel('prev');
     });
-
-    window.addEventListener('load', () => {
-      // 1) Loader & open-paper & fade-in carousel
-      setTimeout(() => {
-        document.getElementById('loader').style.display = 'none';
-        document.getElementById('page-content').classList.add('open-paper');
-        document.querySelector('.project-carousel').classList.add('fade-in');
-      }, 1200);
-
-      // 2) Portfolio carousel
-      const slides    = document.querySelectorAll('.carousel-track .project');
-      const totalEl   = document.getElementById('total');
-      const currentEl = document.getElementById('current');
-      const prevBtn   = document.getElementById('prev');
-      const nextBtn   = document.getElementById('next');
-      let currentIndex = 0;
-
-      totalEl.textContent = slides.length.toString().padStart(2, '0');
-
-      function updateCarousel(direction) {
-        // remove 'active' from all
-        slides.forEach(s => s.classList.remove('active', 'slide-in', 'slide-out'));
-        // add out-animation to old
-        slides[direction === 'next'
-          ? (currentIndex - 1 + slides.length) % slides.length
-          : (currentIndex + 1) % slides.length
-        ].classList.add('slide-out');
-
-        // add active on new
-        slides[currentIndex].classList.add('active', 'slide-in');
-        currentEl.textContent = (currentIndex + 1).toString().padStart(2, '0');
-      }
-
-      prevBtn.addEventListener('click', () => {
-        currentIndex = (currentIndex - 1 + slides.length) % slides.length;
-        updateCarousel('prev');
-      });
-      nextBtn.addEventListener('click', () => {
-        currentIndex = (currentIndex + 1) % slides.length;
-        updateCarousel('next');
-      });
+    nextBtn.addEventListener('click', () => {
+      currentIndex = (currentIndex + 1) % slides.length;
+      updateCarousel('next');
     });
+  });
   </script>
 </body>
 </html>
