--- a/portfolio.html
+++ b/portfolio.html
@@ -49,63 +49,63 @@
         </ul>
       </nav>
     </header>
-
-    <!-- Portfolio Section -->
-    <section id="portfolio" class="section">
-  <h2 class="section-title">Portfolio</h2>
-  <div class="carousel">
-
-    <!-- Slide 1 -->
-    <div class="slide active" data-index="1">
-      <div class="slide-info">
-        <div class="project-number">01</div>
-        <div class="project-desc">
-          <h3>Food Delivery</h3>
-          <p>Single-page app with smooth animations.</p>
+  <main>
+      <!-- Portfolio Section -->
+      <section id="portfolio" class="section">
+    <h2 class="section-title">Portfolio</h2>
+    <div class="carousel">
+  
+      <!-- Slide 1 -->
+      <div class="slide active" data-index="1">
+        <div class="slide-info">
+          <div class="project-number">01</div>
+          <div class="project-desc">
+            <h3>Food Delivery</h3>
+            <p>Single-page app with smooth animations.</p>
+          </div>
+        </div>
+        <div class="slide-image">
+          <img src="Images/delivery platform dashboard.jpeg" alt="Food Delivery Dashboard">
+          <button class="expand-btn">Expand</button>
         </div>
       </div>
-      <div class="slide-image">
-        <img src="Images/delivery platform dashboard.jpeg" alt="Food Delivery Dashboard">
-        <button class="expand-btn">Expand</button>
-      </div>
-    </div>
-
-    <!-- Slide 2 -->
-    <div class="slide" data-index="2">
-      <div class="slide-info">
-        <div class="project-number">02</div>
-        <div class="project-desc">
-          <h3>Recruitment Platform</h3>
-          <p>Interactive dashboard with charts &amp; graphs.</p>
+  
+      <!-- Slide 2 -->
+      <div class="slide" data-index="2">
+        <div class="slide-info">
+          <div class="project-number">02</div>
+          <div class="project-desc">
+            <h3>Recruitment Platform</h3>
+            <p>Interactive dashboard with charts &amp; graphs.</p>
+          </div>
+        </div>
+        <div class="slide-image">
+          <img src="Images/recruitment platform landing page.jpeg" alt="Recruitment Platform">
+          <button class="expand-btn">Expand</button>
         </div>
       </div>
-      <div class="slide-image">
-        <img src="Images/recruitment platform landing page.jpeg" alt="Recruitment Platform">
-        <button class="expand-btn">Expand</button>
-      </div>
-    </div>
-
-    <!-- Slide 3 -->
-    <div class="slide" data-index="3">
-      <div class="slide-info">
-        <div class="project-number">03</div>
-        <div class="project-desc">
-          <h3>Sanbot – API</h3>
-          <p>E-commerce site with shopping cart.</p>
+  
+      <!-- Slide 3 -->
+      <div class="slide" data-index="3">
+        <div class="slide-info">
+          <div class="project-number">03</div>
+          <div class="project-desc">
+            <h3>Sanbot – API</h3>
+            <p>E-commerce site with shopping cart.</p>
+          </div>
+        </div>
+        <div class="slide-image">
+          <img src="Images/sanbot.jpeg" alt="Sanbot API">
+          <button class="expand-btn">Expand</button>
         </div>
       </div>
-      <div class="slide-image">
-        <img src="Images/sanbot.jpeg" alt="Sanbot API">
-        <button class="expand-btn">Expand</button>
-      </div>
+  
+      <!-- Prev/Next controls -->
+      <button class="carousel-btn prev">&laquo; Prev</button>
+      <button class="carousel-btn next">Next &raquo;</button>
     </div>
-
-    <!-- Prev/Next controls -->
-    <button class="carousel-btn prev">&laquo; Prev</button>
-    <button class="carousel-btn next">Next &raquo;</button>
-  </div>
-</section>
-
+    </section>
+  </main>    
 <!-- Lightbox overlay -->
 <div id="lightbox" class="hidden">
   <button id="lightbox-close">&times;</button>
