--- a/skills.html
+++ b/skills.html
@@ -30,7 +30,7 @@
   </div>
 
   <!-- Page Content for “open-paper” -->
-  <div id="page-content">
+  <main id="page-content">
     <!-- Navbar -->
     <header>
       <nav class="navbar">
@@ -84,7 +84,7 @@
     <footer>
       <p>&copy; 2025 Ameed Shubietah. All rights reserved.</p>
     </footer>
-  </div><!-- /#page-content -->
+  </main><!-- /#page-content -->
 
   <!-- Typed.js (if used) -->
   <script src="https://cdn.jsdelivr.net/npm/typed.js@2.0.12"></script>
