--- a/contact.html
+++ b/contact.html
@@ -51,7 +51,11 @@
     <!-- Contact Section -->
     <section id="contact" class="section">
       <h2 class="section-title">Contact Me</h2>
-      <form action="#" class="contact-form">
+      <form
+      action="mailto:ameedraqish@gmail.com" 
+      method="POST" 
+      enctype="text/plain" 
+      class="contact-form">
         <input type="text"    placeholder="Your Name"    required>
         <input type="email"   placeholder="Your Email"   required>
         <textarea placeholder="Your Message" rows="5" required></textarea>
