--- a/contact.html
+++ b/contact.html
@@ -68,7 +68,7 @@
 
   <div class="form-group">
     <label for="name">Your Name</label>
-    <input id="name" type="text" name="name" placeholder="Jane Doe" required>
+    <input id="name" type="text" name="name" placeholder="Ameed Shubietah" required>
   </div>
 
   <div class="form-group">
@@ -82,6 +82,15 @@
   </div>
 
   <button type="submit" class="btn btn-primary">Send Message</button>
+    <span class="or-text">OR</span>
+    <a
+      href="https://wa.me/YOUR_PHONE_NUMBER"
+      target="_blank"
+      rel="noopener"
+      class="btn btn-whatsapp"
+    >
+      Contact me WhatsApp
+    </a>
 </form>
 
   </div>
